# Exercism

./: .gitignore
python/: README.md  pyproject.toml
python/all-your-base/: all_your_base.py  all_your_base_test.py
python/armstrong-numbers/: armstrong_numbers.py  armstrong_numbers_test.py
python/atbash-cipher/: atbash_cipher.py  atbash_cipher_test.py
python/black-jack/: black_jack.py  black_jack_test.py
python/bob/: bob.py  bob_test.py
python/card-games/: lists.py  lists_test.py
python/chaitanas-colossal-coaster/: list_methods.py  list_methods_test.py
python/collatz-conjecture/: collatz_conjecture.py  collatz_conjecture_test.py
python/currency-exchange/: exchange.py  exchange_test.py
python/darts/: darts.py  darts_test.py
python/diamond/: diamond.py  diamond_test.py
python/ghost-gobble-arcade-game/: arcade_game.py  arcade_game_test.py
python/grains/: grains.py  grains_test.py
python/guidos-gorgeous-lasagna/: lasagna.py  lasagna_test.py
python/hello-world/: hello_world.py  hello_world_test.py
python/isbn-verifier/: isbn_verifier.py  isbn_verifier_test.py
python/isogram/: isogram.py  isogram_test.py
python/leap/: leap.py  leap_test.py
python/little-sisters-essay/: string_methods.py  string_methods_test.py
python/little-sisters-vocab/: strings.py  strings_test.py
python/making-the-grade/: loops.py  loops_test.py
python/matching-brackets/: matching_brackets.py  matching_brackets_test.py
python/meltdown-mitigation/: conditionals.py  conditionals_test.py
python/pangram/: pangram.py  pangram_test.py
python/sublist/: sublist.py  (+1 more)
(+22 files in other folders)
